fix colors and alignment

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -18,11 +18,11 @@
 	@extend %btnextend;
 }
 .footer-left {
-	color: blue;
+	color: white;
 	text-align: left;
 }
 .footer-right{
-	color: blue;
+	color: white;
 	text-align: right;
 }
 .btn {
